# constrained-lagrangian-sae

./: README.md  pyproject.toml
configs/: default.yaml
configs/model/: llama3_8b.yaml  pythia_1b.yaml
scripts/: evaluate.py  train.py
spalf/: __init__.py  checkpoint.py  config.py  constants.py  evaluation.py  training.py  whitening.py
spalf/data/: __init__.py  activation_store.py  buffer.py  patching.py  store.py
spalf/evaluation/: __init__.py  downstream_loss.py  sparsity_frontier.py
spalf/model/: __init__.py  constraints.py  initialization.py  kernel.py  sae.py
spalf/optim/: controller.py  lagrangian.py
spalf/optimization/: __init__.py  discretization.py  dual_controller.py
spalf/training/: calibration.py  loop.py  trainer.py
spalf/whitening/: covariance.py  whitener.py
src/: __init__.py
src/activations/: activation_store.py  buffer.py
src/model/: __init__.py  constraints.py  initialization.py  kernel.py  sae.py
src/optimization/: __init__.py  dual_controller.py
src/training/: __init__.py  train.py
src/whitening/: __init__.py  whitener.py
