[project]
name = "lexical-sae"
version = "0.1.0"
description = "SPALF: Spectrally-Preconditioned Augmented Lagrangian on Stratified Feature Manifolds"
requires-python = "==3.12.*"
dependencies = [
    "torch==2.6.0",
    "transformers==4.48.3",
    "datasets==3.2.0",
    "numpy==2.1.3",
    "hydra-core==1.3.2",
    "omegaconf==2.3.0",
    "triton==3.1.0",
    "safetensors==0.4.5",
]

[build-system]
requires = ["setuptools==75.8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["spalf*"]
